--- a/03_Analisis_de_Datos/EDA/1-Definicion_EDA.ipynb
+++ b/03_Analisis_de_Datos/EDA/1-Definicion_EDA.ipynb
@@ -22,13 +22,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Escribe el título del proyecto en Markdown\n",
-    "titulo = \"\""
+    "# AUTOCONCEPTO SEXUAL: UN ESTUDIO EXPLORATORIO "
    ]
   },
   {
@@ -39,13 +36,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Describe brevemente el tema del proyecto en Markdown\n",
-    "tema = \"\""
+    "Este proyecto se centra en analizar el **autoconcepto sexual de hombres y mujeres desde la adolescencia hasta la vejez**. A través del instrumento de evaluación sexológico Multidimensional Sexual Self-Concept Questionnaire (MSSCQ), diseñado por el Dr. William E. Snell en 1995, se estudian, a través de 100 items, 20 aspectos de la sexualidad humana: ansiedad sexual, autoeficacia sexual, conciencia sexual, motivación para evitar prácticas sexuales de riesgo, control sexual por azar/suerte, preocupación sexual, asertividad sexual, optimismo sexual, autoinculpación por problemas sexuales, supervisión sexual, motivación sexual, gestión de problemas sexuales, autoestima sexual, satisfacción sexual, control sexual por parte de otros, autoesquemas sexuales, miedo al sexo, prevención de problemas sexuales, depresión sexual, control sexual interno. "
    ]
   },
   {
@@ -64,27 +58,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Escribe tu hipótesis principal en Markdown\n",
-    "hipotesis_1 = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Escribe más hipótesis si las hubiera en Markdown\n",
-    "# hipotesis_2 = \"\"\n",
-    "# hipotesis_3 = \"\"\n",
-    "# hipotesis_4 = \"\"\n",
-    "# hipotesis_5 = \"\"\n",
-    "# ...\n"
+    "HIPÓTESIS PRINCIPAL:\n",
+    "\n",
+    "El género y la edad tienen relación con la ansiedad sexual que pueda tener una persona.\n",
+    "\n",
+    "OTRAS HIPÓTESIS:\n",
+    "\n",
+    "- H1. Hay relación entre ansiedad sexual y depresión sexual.\n",
+    "- H2. Las mujeres sienten mayor motivación para evitar situaciones sexuales de riesgo. \n",
+    "- H3. Las personas con mayor asertividad sexual viven de manera más satisfactoria su sexualidad.\n",
+    "- H4. Las personas adultas tienen mayor conciencia sexual que las personas adolescentes.\n",
+    "- H5. Las personas adolescentes manifiestan más miedo al sexo que las personas adultas."
    ]
   },
   {
@@ -110,24 +97,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Librerías "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "# guarda en variables los datasets y su fuente\n",
-    "df_1 = pd.DataFrame()\n",
-    "fuente_1 = \"\"\n",
-    "# df_2 = pd.DataFrame()\n",
-    "# fuente_2 = \"\"\n",
-    "# df_3 = pd.DataFrame()\n",
-    "# fuente_3 = \"\"\n",
-    "# df_4 = pd.DataFrame()\n",
-    "# fuente_4 = \"\"\n",
-    "# df_5 = pd.DataFrame()\n",
-    "# fuente_5 = \"\"\n",
-    "# ..."
+    "import seaborn as sns\n",
+    "import scipy.stats as stats\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importar datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./data.csv\", delimiter = \"\\t\") #Especificar delimitador de columnas "
    ]
   },
   {
@@ -139,22 +141,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Q1</th>\n",
+       "      <th>Q2</th>\n",
+       "      <th>Q3</th>\n",
+       "      <th>Q4</th>\n",
+       "      <th>Q5</th>\n",
+       "      <th>Q6</th>\n",
+       "      <th>Q7</th>\n",
+       "      <th>Q8</th>\n",
+       "      <th>Q9</th>\n",
+       "      <th>Q10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Q93</th>\n",
+       "      <th>Q94</th>\n",
+       "      <th>Q95</th>\n",
+       "      <th>Q96</th>\n",
+       "      <th>Q97</th>\n",
+       "      <th>Q98</th>\n",
+       "      <th>Q99</th>\n",
+       "      <th>Q100</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 102 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Q1  Q2  Q3  Q4  Q5  Q6  Q7  Q8  Q9  Q10  ...  Q93  Q94  Q95  Q96  Q97  Q98  \\\n",
+       "0   3   2   5   5   1   2   2   1   1    2  ...    4    1    1    5    5    3   \n",
+       "1   5   1   5   1   1   2   1   3   1    1  ...    1    1    1    2    1    1   \n",
+       "2   1   4   5   5   1   4   5   5   5    4  ...    5    5    1    5    4    4   \n",
+       "3   5   4   5   5   5   5   2   4   5    5  ...    4    1    2    5    0    4   \n",
+       "4   4   5   4   5   4   2   3   2   4    5  ...    1    1    3    1    1    1   \n",
+       "\n",
+       "   Q99  Q100  age  gender  \n",
+       "0    5     4   23       1  \n",
+       "1    5     3   25       2  \n",
+       "2    1     4   20       1  \n",
+       "3    5     5   23       2  \n",
+       "4    4     3   50       2  \n",
+       "\n",
+       "[5 rows x 102 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Primer dataset\n",
-    "# df_1.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Siguiente dataset...\n",
-    "# df_2.head()"
+    "df.head()"
    ]
   }
  ],
@@ -174,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
