--- a/04_Machine_Learning/Sprint_15/Team Challenge/Kaggle_Ayuda.ipynb
+++ b/04_Machine_Learning/Sprint_15/Team Challenge/Kaggle_Ayuda.ipynb
@@ -1674,6 +1674,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        X540UA-DM186\n",
+       "1              Aspire\n",
+       "2      X540SA-RBPDN09\n",
+       "3            Inspiron\n",
+       "4          14-am079na\n",
+       "            ...      \n",
+       "724           ProBook\n",
+       "725            Laptop\n",
+       "726         Elitebook\n",
+       "727          Inspiron\n",
+       "728            GE63VR\n",
+       "Name: Product, Length: 729, dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para limpiar la columna 'Product'\n",
+    "def limpiar_producto(producto):\n",
+    "    if pd.notna(producto):\n",
+    "        # Dividir el producto por espacios y mantener solo la primera palabra\n",
+    "        palabras = producto.split()\n",
+    "        return palabras[0]\n",
+    "    else:\n",
+    "        return 'Unk'\n",
+    "\n",
+    "\n",
+    "# Aplicar la función limpiar_producto a la columna 'Product'\n",
+    "X_train['Product'] = X_train['Product'].apply(limpiar_producto)\n",
+    "\n",
+    "X_test['Product'] = X_test['Product'].apply(limpiar_producto)\n",
+    "\n",
+    "\n",
+    "# Eliminar cualquier texto entre paréntesis en la columna 'Product'\n",
+    "X_train['Product'] = X_train['Product'].str.replace(r'\\([^)]*\\)?', '').str.strip()\n",
+    "\n",
+    "X_test['Product'] = X_test['Product'].str.replace(r'\\([^)]*\\)?', '').str.strip()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1773,6 +1833,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para extraer los números, determinar si es touchscreen, identificar la calidad de la pantalla y si contiene IPS Panel\n",
+    "def extraer_numeros_touch_calidad_ips(cadena):\n",
+    "    numeros = re.findall(r'\\d+', cadena)\n",
+    "    touch = 'Touchscreen' in cadena\n",
+    "    calidad = re.search(r'(Full HD|Quad HD|4K Ultra HD|Retina Display)', cadena)\n",
+    "    calidad = calidad.group() if calidad else None\n",
+    "    ips_panel = 'IPS Panel' in cadena\n",
+    "    return {'Ancho': int(numeros[0]), 'Alto': int(numeros[1]), 'Touchscreen': touch, 'Calidad': calidad, 'IPS': ips_panel}\n",
+    "\n",
+    "# Aplicar la función y expandir los resultados en nuevas columnas\n",
+    "X_train[['Ancho', 'Alto', 'Touchscreen', 'Calidad', 'IPS']] = df_train['ScreenResolution'].apply(extraer_numeros_touch_calidad_ips).apply(pd.Series)\n",
+    "\n",
+    "X_test[['Ancho', 'Alto', 'Touchscreen', 'Calidad', 'IPS']] = df_train['ScreenResolution'].apply(extraer_numeros_touch_calidad_ips).apply(pd.Series)\n",
+    "\n",
+    "# Rellenar los valores faltantes con ceros\n",
+    "X_train.fillna(0, inplace=True)\n",
+    "\n",
+    "X_test.fillna(0, inplace=True)\n",
+    "\n",
+    "\n",
+    "# Eliminar la columna original 'ScreenResolution'\n",
+    "X_train.drop(columns='ScreenResolution', inplace=True)\n",
+    "\n",
+    "X_test.drop(columns='ScreenResolution', inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'ScreenResolution'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21164\\3813856775.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mScreenResolution\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6292\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6293\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6294\u001b[0m         ):\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6296\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'ScreenResolution'"
+     ]
+    }
+   ],
+   "source": [
+    "X_train.ScreenResolution.dtype"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1781,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,8 +1905,8 @@
     "X_test['Cpu'] = X_test['Cpu'].astype(str)\n",
     "\n",
     "# Extraer la frecuencia del CPU y crear una nueva columna\n",
-    "X_train['Cpu_Frequency'] = X_train['Cpu'].str.extract('(\\d+(?:\\.\\d+)?)GHz').astype(float)\n",
-    "X_test['Cpu_Frequency'] = X_test['Cpu'].str.extract('(\\d+(?:\\.\\d+)?)GHz').astype(float)\n",
+    "X_train['Cpu_num'] = X_train['Cpu'].str.extract('(\\d+(?:\\.\\d+)?)GHz').astype(float)\n",
+    "X_test['Cpu_num'] = X_test['Cpu'].str.extract('(\\d+(?:\\.\\d+)?)GHz').astype(float)\n",
     "\n",
     "# Eliminar el patrón de frecuencia de la columna original para mantener solo el resto del texto\n",
     "X_train['Cpu'] = X_train['Cpu'].str.replace(r'(\\d+(?:\\.\\d+)?)GHz', '', regex=True)\n",
