--- a/04_Machine_Learning/Sprint_15/Team Challenge/prueba.ipynb
+++ b/04_Machine_Learning/Sprint_15/Team Challenge/prueba.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "4      1713.37  "
       ]
      },
-     "execution_count": 304,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "% Cardinalidad   17.32       67.32  "
       ]
      },
-     "execution_count": 305,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "max    1302.000000  1320.000000   18.400000  6099.000000"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "<Axes: xlabel='Price_euros', ylabel='Count'>"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
        "(729, 13)"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "(729,)"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        "(183, 13)"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "(183,)"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2323,7 @@
        "[391 rows x 24 columns]"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2427,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,37 +2447,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_test2 =df_test[['Inches', 'Ram', 'Weight', 'Speed', 'Capacidad_GB', 'Capacidad_TB','Product', 'ScreenResolution', 'Company', 'OpSys', 'Categoria',\n",
-    "       'Gpu_group', 'Disco', 'Touchscreen', 'Calidad', 'IPS']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "columns are missing: {'laptop_ID', 'Gpu', 'Cpu', 'TypeName', 'Ancho', 'id', 'Alto'}",
+     "evalue": "columns are missing: {'TypeName'}",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[329], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m predictions_submit \u001b[38;5;241m=\u001b[39m \u001b[43mgrid_search\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_test2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m predictions_submit\n",
-      "File \u001b[1;32mc:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\model_selection\\_search.py:546\u001b[0m, in \u001b[0;36mBaseSearchCV.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    528\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Call predict on the estimator with the best found parameters.\u001b[39;00m\n\u001b[0;32m    529\u001b[0m \n\u001b[0;32m    530\u001b[0m \u001b[38;5;124;03mOnly available if ``refit=True`` and the underlying estimator supports\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    543\u001b[0m \u001b[38;5;124;03m    the best found parameters.\u001b[39;00m\n\u001b[0;32m    544\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    545\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m--> 546\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbest_estimator_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[403], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m predictions_submit \u001b[38;5;241m=\u001b[39m \u001b[43mbest_model_1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m predictions_submit\n",
       "File \u001b[1;32mc:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\pipeline.py:602\u001b[0m, in \u001b[0;36mPipeline.predict\u001b[1;34m(self, X, **params)\u001b[0m\n\u001b[0;32m    600\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m _routing_enabled():\n\u001b[0;32m    601\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _, name, transform \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_iter(with_final\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m--> 602\u001b[0m         Xt \u001b[38;5;241m=\u001b[39m \u001b[43mtransform\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    603\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msteps[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mpredict(Xt, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n\u001b[0;32m    605\u001b[0m \u001b[38;5;66;03m# metadata routing enabled\u001b[39;00m\n",
       "File \u001b[1;32mc:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\_set_output.py:295\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    293\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[0;32m    294\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 295\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m f(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    296\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    297\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    298\u001b[0m         return_tuple \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    299\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    300\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[0;32m    301\u001b[0m         )\n",
       "File \u001b[1;32mc:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py:1003\u001b[0m, in \u001b[0;36mColumnTransformer.transform\u001b[1;34m(self, X, **params)\u001b[0m\n\u001b[0;32m   1001\u001b[0m     diff \u001b[38;5;241m=\u001b[39m all_names \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mset\u001b[39m(column_names)\n\u001b[0;32m   1002\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m diff:\n\u001b[1;32m-> 1003\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns are missing: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdiff\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1004\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1005\u001b[0m     \u001b[38;5;66;03m# ndarray was used for fitting or transforming, thus we only\u001b[39;00m\n\u001b[0;32m   1006\u001b[0m     \u001b[38;5;66;03m# check that n_features_in_ is consistent\u001b[39;00m\n\u001b[0;32m   1007\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_n_features(X, reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mValueError\u001b[0m: columns are missing: {'laptop_ID', 'Gpu', 'Cpu', 'TypeName', 'Ancho', 'id', 'Alto'}"
+      "\u001b[1;31mValueError\u001b[0m: columns are missing: {'TypeName'}"
      ]
     }
    ],
    "source": [
-    "predictions_submit = lm.predict(df_test2)\n",
+    "predictions_submit = best_model_1.predict(df_test)\n",
     "predictions_submit"
    ]
   },
@@ -2496,6 +2485,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import urllib.request\n",
+    "from PIL import Image\n",
+    "\n",
     "def chequeator(df_to_submit):\n",
     "    \"\"\"\n",
     "    Esta función se asegura de que tu submission tenga la forma requerida por Kaggle.\n",
