--- a/05_Deep_Learning/Sprint_18/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Introduccion_Keras.ipynb
+++ b/05_Deep_Learning/Sprint_18/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Introduccion_Keras.ipynb
@@ -252,7 +252,7 @@
     "from tensorflow.keras.layers import Dense, Flatten\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "# Normalizar los datos\n",
+    "# Normalizar los datos que se divide entre 255 porque es el extremo del color de gris\n",
     "X_train = X_train / 255.0\n",
     "X_test = X_test / 255.0\n",
     "\n",
@@ -442,7 +442,7 @@
     "\n",
     "# Predecir etiquetas para el conjunto de prueba\n",
     "y_pred = model.predict(X_test)\n",
-    "y_pred_classes = np.argmax(y_pred, axis=1)\n",
+    "y_pred_classes = np.argmax(y_pred, axis=1) #para coger la predicción más alta\n",
     "\n",
     "# Reporte de clasificación\n",
     "report = classification_report(y_test, y_pred_classes, target_names=class_names)\n",
